# redsun

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-dev.txt  search.json  searchindex.js  sitemap.xml  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yaml  deploy-docs.yaml  run-code-analysis.yaml  run-tests.yaml
_sources/: index.md.txt
_sources/api/: virtual.md.txt
_sources/getting_started/: index.md.txt
api/: index.html
api/engine/: index.html
api/engine/handler/: index.html
api/virtual/: index.html
changelog/: index.html
docs/: changelog.md  conf.py  index.md
docs/_static/: switcher.json
docs/api/: index.md  types.md
docs/api/engine/: handler.md  index.md
docs/explanation/: component-system.md  container-architecture.md  index.md  plugin-system.md  statement.md  storage.md
docs/explanation/architecture/: devices.md  in-process-device.md  plans.md  presenters.md  qt-widgets.md  storage.md  virtual.md
docs/getting_started/: index.md
docs/how-to/: build-docs.md  index.md  installation.md  run-tests.md
docs/reference/: api.md  changelog.md  index.md
docs/reference/api/: config.md  container.md  containers.md  device.md  engine.md  log.md  presenter.md  storage.md  utils.md  view.md  virtual.md
docs/tutorials/: index.md
explanation/: index.html
explanation/architecture/devices/: index.html
explanation/architecture/in-process-device/: index.html
explanation/architecture/plans/: index.html
explanation/architecture/presenters/: index.html
explanation/architecture/qt-widgets/: index.html
explanation/architecture/storage/: index.html
explanation/architecture/virtual/: index.html
explanation/component-system/: index.html
explanation/container-architecture/: index.html
explanation/plugin-system/: index.html
explanation/statement/: index.html
explanation/storage/: index.html
genindex/: index.html
getting_started/: index.html
how-to/: index.html
how-to/build-docs/: index.html
how-to/installation/: index.html
how-to/run-tests/: index.html
py-modindex/: index.html
redsun/controller/: __init__.py  controller.py  factory.py  registry.py
redsun/controller/engine/exengine/: __init__.py  handler.py
reference/: index.html
reference/api/: index.html
reference/api/container/: index.html
reference/api/device/: index.html
reference/api/engine/: index.html
reference/api/log/: index.html
reference/api/presenter/: index.html
reference/api/storage/: index.html
reference/api/utils/: index.html
reference/api/view/: index.html
reference/api/virtual/: index.html
reference/changelog/: index.html
search/: index.html  search_index.json
src/redsun/: __init__.py  __main__.py  aio.py  config.py  controller.py  factory.py  plugins.py  plugins_new.py  virtual.py  virtualbus.py
src/redsun/common/: __init__.py  qt.py  types.py  view.py
src/redsun/containers/: __init__.py  _config.py  components.py  container.py  qt_container.py
src/redsun/containers/qt/: __init__.py  _container.py  _mainview.py
src/redsun/controller/: __init__.py  config.py  factory.py  hardware.py  plugins.py  protocols.py  virtualbus.py
src/redsun/controller/controllers/: __init__.py  detector.py  motor.py
src/redsun/device/: __init__.py  _acquisition.py  _attrs.py  _base.py  _soft.py  _vector.py  acquisition.py  protocols.py
src/redsun/engine/: __init__.py  _exceptions.py  _wrapper.py  actions.py  plan_stubs.py
src/redsun/engine/bluesky/: __init__.py  handler.py
src/redsun/engine/exengine/: __init__.py  handler.py
src/redsun/presenter/: _base.py  plan_spec.py  utils.py
src/redsun/qt/: __init__.py  _mainview.py
src/redsun/storage/: __init__.py  _base.py  _context.py  _data_logic.py  _factory.py  _info.py  _metadata_callback.py  _new_base.py  _new_factory.py  _new_zarr.py  _path.py  _prepare.py  _proxy.py  _trigger_logic.py  _zarr.py  device.py  metadata.py  presenter.py  protocols.py  utils.py  zarr.py
src/redsun/tests/: test_controller.py  test_factory.py  test_virtualbus.py
src/redsun/utils/: __init__.py  aio.py  descriptors.py
src/redsun/view/: __init__.py  _base.py
src/redsun/view/qt/: __init__.py  (+7 more)
src/redsun/virtual/: __init__.py  _container.py  _protocols.py  plugins.py  virtualbus.py
tests/: __conftest.py  conftest.py  test_container.py  test_factory.py  test_plugins.py  test_plugins_new.py
tests/configs/: broken_factory_controller.yaml  broken_factory_model.yaml  broken_model_config.yaml  hidden_model_config.yaml  mock_component_config.yaml  mock_controller_config.yaml  mock_detector_config.yaml  mock_full_config.yaml  mock_motor_config.yaml  mock_storage_config.yaml
tests/container/: conftest.py  test_container.py
tests/container/configs/: broken_factory_controller.yaml  broken_factory_model.yaml  hidden_model_config.yaml  mock_controller_config.yaml  mock_full_config.yaml  mock_motor_config.yaml  mock_storage_config.yaml
tests/container/mock_pkg/: redsun.yaml
tests/mock_pkg/: redsun.yaml  setup.py
tests/mock_pkg/controller/: __init__.py  mock_controllers.py  mock_presenters.py
tests/mock_pkg/device/: __init__.py  broken_device.py  mock_detectors.py  mock_motors.py
tests/mock_pkg/model/: __init__.py  broken_model.py  mock_detectors.py  mock_motors.py
tests/mock_pkg/view/: __init__.py  mock_views.py
tests/mocks/: __init__.py  mock_controller.py  mock_detector.py  mock_entry_points.py  mock_motor.py
tests/mocks/configs/: mock_controller_config.yaml  mock_detector_config.yaml  mock_motor_config.yaml
tests/sdk/: conftest.py  mocks.py  test_device.py  test_engine.py  test_log.py  test_plan_spec.py  test_plan_widget.py  test_presenter.py  test_storage.py  test_view.py  test_virtual.py
tests/sdk/data/: detector_instance.yaml  full_instance.yaml  motor_instance.yaml  multi_model_instance.yaml
tutorials/: index.html
(+29 files in other folders)
