[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "redsun"
dynamic = ["version"]
description = "Event-driven data acquisition software for scientific applications."
readme = "README.md"
authors = [{ name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" }]
maintainers = [{ name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License",
]
license = { text = "Apache-2.0" }
dependencies = [
    "sunflare>=0.7.0",
    "platformdirs>=4.3.8",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "sunflare[pyqt]>=0.7.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
    "sphinx>=8.1.3",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-design>=0.6.1",
    "myst-parser>=4.0.1",
]

[project.optional-dependencies]
pyqt = ["sunflare[pyqt]"]
pyside = ["sunflare[pyside]"]

[project.urls]
bugs = "https://github.com/redsun-acquisition/redsun/issues"
changelog = "https://github.com/redsun-acquisition/redsun/blob/master/changelog.md"
homepage = "https://github.com/redsun-acquisition/redsun"

[project.scripts]
redsun = "redsun.__main__:main_cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/redsun"]

[tool.hatch.build.targets.sdist]
include = [
  "src/redsun/*.py",
  "src/redsun/docs/**",
  "tests/**",
]

[tool.mypy]
files = "."
exclude = ["docs", "tests"]
disable_error_code = ["import-untyped"]
pretty = true

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
disable_error_code = "attr-defined"

[tool.coverage.run]
source = ["redsun"]
omit = [
    "tests/conftest.py",
]

[tool.ruff]
target-version = "py39"
extend-exclude = ["docs", "tests"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "D", # enable docstring checks
    "I", # enable imports checks
    "FA102", # force __future__ imports
] 
ignore = ["D100","D104"] # https://docs.astral.sh/ruff/rules/undocumented-public-package/

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "@overload",
    "class .*Protocol",
    "except ImportError",
    "except PackageNotFoundError",
    "raise NotImplementedError()",
]
