[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "redsun"
dynamic = ["version"]
description = "Event-driven data acquisition software for scientific applications."
readme = "README.md"
authors = [{ name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" }]
maintainers = [{ name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: Apache Software License",
]
license = { text = "Apache-2.0" }
dependencies = [
    "platformdirs>=4.3.8",
    "pyyaml>=6.0.3",
    "bluesky>=1.15.0",
    "psygnal>=0.15.1",
    "typing-extensions>=4.15.0",
    "dependency-injector>=4.49.0",
    "ophyd-async>=0.17a2",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "redsun[pyqt,zarr]",
    "mypy>=1.20.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
    "types-pyyaml>=6.0.12.20250915",
    "ruff>=0.14.14",
    "ophyd>=1.11.0",
    "griffe-fieldz>=0.4.0",
    "pytest-asyncio>=1.3.0",
]
docs = [
    "mike>=2.1.3",
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.24",
]

[project.optional-dependencies]
zarr = [
    "acquire-zarr>=0.7.0",
]
pyqt = [
    "magicgui>=0.10.1",
    "pyqt6>=6.10.2",
    "qtpy>=2.4.3",
]
pyside = [
    "magicgui>=0.10.1",
    "pyside6>=6.9.1",
    "qtpy>=2.4.3",
]

[project.urls]
bugs = "https://github.com/redsun-acquisition/redsun/issues"
changelog = "https://github.com/redsun-acquisition/redsun/blob/master/changelog.md"
homepage = "https://github.com/redsun-acquisition/redsun"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/redsun"]

[tool.hatch.build.targets.sdist]
include = [
  "src/redsun/**",
]

[tool.mypy]
files = "."
exclude = ["docs", "tests"]
disable_error_code = [
    "import-untyped",
    "no-untyped-call"
]
pretty = true
strict = true
warn_unreachable = true
warn_no_return = true

[tool.coverage.run]
source = ["redsun"]
omit = [
    "tests/conftest.py",
    "src/redsun/view/**",
]

[tool.ruff]
fix = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "D", # enable docstring checks
    "I", # enable imports checks
    "TC", # enable type check imports
    "FA102", # force __future__ imports
] 
ignore = ["D100","D104"] # https://docs.astral.sh/ruff/rules/undocumented-public-package/

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    # ignore missing docstrings in tests
    "D101", 
    "D102", 
    "D103",
    # ignore type check imports in tests
    "TC"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "@overload",
    "class .*Protocol",
    "except ImportError",
    "except PackageNotFoundError",
    "raise NotImplementedError()",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = "-p no:warnings"
asyncio_mode = "auto"
markers = [
    "qt: marks tests that require a Qt display (skipped in headless environments)",
]
env = [
    "QT_QPA_PLATFORM=offscreen",
]
